--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 h2{
-    color: black
+    color: black;
     background-color: aquamarine;
 }
 .c1{
-    color: black
+    color: black;
  background-color: burlywood;
 }
 .c2{
-    color: black
+    color: black;
     background-color: cornflowerblue;
 }
 .c3{
